--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   border-radius: 5px;
 }
 
-#game_phaser canvas {  
+#game canvas {  
   margin: 0px 0px;  
   /*border: 2px solid rgb(255, 255, 255);*/
 }
